# VC-Task1

./: CMakeLists.txt  README.md
include/glad/: glad.h
src/: glad.c  pointRenderer.cpp  pointRenderer.fs  pointRenderer.vs
